# analise-sentimento-google-play

./: LICENSE  README.md  pyproject.toml
notebooks/: Análise_de_Sentimento_Obtenção_dos_dados.ipynb  Análise_de_Sentimento_com_Spark_NLP.ipynb  Kafka.ipynb  Pubsub.ipynb  README.md
src/: get_app_info.py  get_reviews.py  google_play_getting_data.py
src/scrap/: cloud_function.py  get_reviews.py  google_play_getting_data.py  main.py  requirements.txt  sentiment_conversion.py
src/sparknlp/: model.py  spark_nlp.py
webapi/app/: main.py
webapp/: package-lock.json  package.json
webapp/src/: App.css  App.js
